--- a/app/src/main/res/layout/activity_add_rezept.xml
+++ b/app/src/main/res/layout/activity_add_rezept.xml
@@ -69,9 +69,14 @@
 
     <Button
         android:id="@+id/btnAdd"
-        android:layout_width="wrap_content"
+        android:layout_width="84dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="72dp"
         android:text="Add"
-        tools:layout_editor_absoluteX="195dp"
-        tools:layout_editor_absoluteY="312dp" />
+        app:layout_constraintEnd_toEndOf="@+id/editDauer"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintStart_toStartOf="@+id/editDauer"
+        app:layout_constraintTop_toBottomOf="@+id/editDauer" />
 </android.support.constraint.ConstraintLayout>
