--- a/app/src/main/res/layout/activity_rezepte.xml
+++ b/app/src/main/res/layout/activity_rezepte.xml
@@ -6,10 +6,62 @@
     android:layout_height="match_parent"
     tools:context="ch.bbbaden.ims.rezepteverwaltung.activities.RezepteActivity">
 
-    <ListView
-        android:layout_width="368dp"
-        android:layout_height="148dp"
+    <TableLayout
+        android:layout_width="251dp"
+        android:layout_height="495dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteY="8dp" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/name1"
+                android:layout_width="103dp"
+                android:layout_height="match_parent"
+                android:padding="3dip"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/Zubereitung1"
+                android:layout_height="match_parent"
+                android:padding="3dip"
+                android:text="" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/name2"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="3dip"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/Zubereitung2"
+                android:layout_height="match_parent"
+                android:padding="3dip"
+                android:text="" />
+        </TableRow>
+
+        <TableRow>
+
+            <TextView
+                android:id="@+id/name3"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="3dip"
+                android:text="" />
+
+            <TextView
+                android:id="@+id/Zubereitung3"
+                android:layout_height="match_parent"
+                android:padding="3dip"
+                android:text="" />
+        </TableRow>
+    </TableLayout>
 </android.support.constraint.ConstraintLayout>
