--- a/app/src/main/res/layout/activity_rezepte_list.xml
+++ b/app/src/main/res/layout/activity_rezepte_list.xml
@@ -23,7 +23,7 @@
                 android:layout_width="103dp"
                 android:layout_height="match_parent"
                 android:padding="3dip"
-                android:text="" />
+                android:text="alle rezepte" />
 
             <TextView
                 android:id="@+id/Zubereitung1"
