--- a/app/src/main/res/layout/content_rezept.xml
+++ b/app/src/main/res/layout/content_rezept.xml
@@ -8,10 +8,25 @@
     tools:context="ch.bbbaden.ims.rezepteverwaltung.activities.RezeptActivity"
     tools:showIn="@layout/activity_rezept">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+        android:orientation="vertical">
 
+        <!-- TextView and other stuff -->
+
+        <TextView
+            android:id="@+id/viewRezeptDauer"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin"
+            android:text="rezeptDauer" />
+
+        <TextView
+            android:id="@+id/viewRezeptZubereitung"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/text_margin" />
+
+    </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
