--- a/app/src/main/res/layout/activity_rezepte_list.xml
+++ b/app/src/main/res/layout/activity_rezepte_list.xml
@@ -6,62 +6,16 @@
     android:layout_height="match_parent"
     tools:context="ch.bbbaden.ims.rezepteverwaltung.activities.RezepteListActivity">
 
-    <TableLayout
-        android:layout_width="251dp"
+    <ListView
+        android:id="@+id/listView"
+        android:layout_width="368dp"
         android:layout_height="495dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
-
-        <TableRow>
-
-            <TextView
-                android:id="@+id/name1"
-                android:layout_width="103dp"
-                android:layout_height="match_parent"
-                android:padding="3dip"
-                android:text="alle rezepte" />
-
-            <TextView
-                android:id="@+id/Zubereitung1"
-                android:layout_height="match_parent"
-                android:padding="3dip"
-                android:text="" />
-        </TableRow>
-
-        <TableRow>
-
-            <TextView
-                android:id="@+id/name2"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="3dip"
-                android:text="" />
-
-            <TextView
-                android:id="@+id/Zubereitung2"
-                android:layout_height="match_parent"
-                android:padding="3dip"
-                android:text="" />
-        </TableRow>
-
-        <TableRow>
-
-            <TextView
-                android:id="@+id/name3"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:padding="3dip"
-                android:text="" />
-
-            <TextView
-                android:id="@+id/Zubereitung3"
-                android:layout_height="match_parent"
-                android:padding="3dip"
-                android:text="" />
-        </TableRow>
-    </TableLayout>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
